syntax = "proto3";
package odservice;

message ImageRequest {
  bytes image_file = 1;
  string model = 2;
}

message ImageResponse {
  bool success = 1;  // Whether the upload was successful
  string message = 2;  // A response message from the server
  float process_time = 3;
  float throughput = 4;
  float power = 5;
  float cpu_utilized = 6;
  float memory_utilized = 7;
}

message LogEntry {
  string service_name = 1;
  string ip_address = 2;
  float process_time = 3;
  float grpc_response_time = 4;
  float total_response_time = 5;
  float throughput = 6;
  float power = 7;
  float cpu_utilized = 8;
  float memory_utilized = 9;
}

message LogResponse {
  bool success = 1;
  string message = 2;
}

service OdService {
  // Upload the image file using client streaming.
  rpc UploadImage(stream ImageRequest) returns (ImageResponse) {}

  rpc SendLogEntry(LogEntry) returns (LogResponse) {}

}